[package]
name = "todo-actix"
version = "0.1.0"
authors = ["Daniel Petersen <daniel.petersen@rapidcyberdefense.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0"
serde = { version = "1.0.111", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
